SERVER-2417 wait for file allocator to finish in _deleteDataFiles directoryperdb case